igt@gem_userptr_blits@sync-unmap-after-close - WARNING: CPU: 3 PID: 6239 at mm/mmu_notifier.c:472 __mmu_notifier_invalidate_range_start+0x1f2/0x250
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_7522/shard-apl3/igt@gem_userptr_blits@sync-unmap-after-close.html
<4> [2055.808787] WARNING: CPU: 3 PID: 6239 at mm/mmu_notifier.c:472 __mmu_notifier_invalidate_range_start+0x1f2/0x250
<4> [2055.808792] Modules linked in: vgem mei_hdcp snd_hda_codec_hdmi snd_hda_codec_realtek snd_hda_codec_generic x86_pkg_temp_thermal coretemp crct10dif_pclmul crc32_pclmul ghash_clmulni_intel r8169 lpc_ich realtek i915 snd_hda_intel snd_intel_dspcfg snd_hda_codec snd_hwdep snd_hda_core pinctrl_broxton snd_pcm pinctrl_intel mei_me intel_lpss_pci mei prime_numbers [last unloaded: vgem]
<4> [2055.808834] CPU: 3 PID: 6239 Comm: gem_userptr_bli Tainted: G U 5.5.0-rc1-CI-CI_DRM_7522+ #1
<4> [2055.808839] Hardware name: /NUC6CAYB, BIOS AYAPLCEL.86A.0049.2018.0508.1356 05/08/2018
<4> [2055.808847] RIP: 0010:__mmu_notifier_invalidate_range_start+0x1f2/0x250
<4> [2055.808853] Code: c2 48 c7 c7 70 17 2e 82 44 89 45 d4 48 8b 70 28 e8 ec 01 ef ff 41 f6 46 20 01 44 8b 45 d4 75 0a 41 83 f8 f5 44 89 7d d4 74 89 <0f> 0b 44 89 45 d4 eb 81 0f 0b 49 8b 46 18 49 8b 76 10 4c 89 ff 48
<4> [2055.808858] RSP: 0018:ffffc90002937d40 EFLAGS: 00010202
<4> [2055.808865] RAX: 0000000000000061 RBX: ffff8882703a33e0 RCX: 0000000000000001
<4> [2055.808870] RDX: 0000000000000000 RSI: ffff888277da8cb8 RDI: 00000000ffffffff
<4> [2055.808874] RBP: ffffc90002937d70 R08: 00000000fffffff5 R09: 0000000000000000
<4> [2055.808879] R10: 0000000000000000 R11: 0000000000000000 R12: 0000000000000001
<4> [2055.808884] R13: ffffffff822e1716 R14: ffffc90002937d80 R15: 00000000fffffff5
<4> [2055.808890] FS: 00007fda75004e40(0000) GS:ffff888277d80000(0000) knlGS:0000000000000000
<4> [2055.808895] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [2055.808900] CR2: 000055ad72ec3000 CR3: 00000002697b2000 CR4: 00000000003406e0
<4> [2055.808904] Call Trace:
<4> [2055.808920] unmap_vmas+0x13e/0x150
<4> [2055.808937] unmap_region+0xa3/0x100
<4> [2055.808964] __do_munmap+0x26d/0x490
<4> [2055.808980] __vm_munmap+0x66/0xc0
<4> [2055.808994] __x64_sys_munmap+0x12/0x20
<4> [2055.809001] do_syscall_64+0x4f/0x220
<4> [2055.809010] entry_SYSCALL_64_after_hwframe+0x49/0xbe
<4> [2055.809016] RIP: 0033:0x7fda73d62ab7
<4> [2055.809023] Code: 10 e9 67 ff ff ff 0f 1f 44 00 00 48 8b 15 c9 f3 2c 00 f7 d8 64 89 02 48 c7 c0 ff ff ff ff e9 6b ff ff ff b8 0b 00 00 00 0f 05 <48> 3d 01 f0 ff ff 73 01 c3 48 8b 0d a1 f3 2c 00 f7 d8 64 89 01 48
<4> [2055.809028] RSP: 002b:00007ffce843de48 EFLAGS: 00000246 ORIG_RAX: 000000000000000b
<4> [2055.809034] RAX: ffffffffffffffda RBX: 0000000000000004 RCX: 00007fda73d62ab7
<4> [2055.809039] RDX: 00007ffce843de30 RSI: 0000000000300fff RDI: 00007fda682ce000
<4> [2055.809043] RBP: 0000000000000005 R08: 0000000000000000 R09: 00007ffce843de58
<4> [2055.809048] R10: 0000000000000056 R11: 0000000000000246 R12: 00007fda682ce000
<4> [2055.809053] R13: 00007ffce843de50 R14: 00007ffce843de5c R15: 00007fda685ce000
<4> [2055.809079] irq event stamp: 50608
<4> [2055.809086] hardirqs last enabled at (50607): [<ffffffff8112cbda>] console_unlock+0x4ba/0x5a0
<4> [2055.809093] hardirqs last disabled at (50608): [<ffffffff81001c30>] trace_hardirqs_off_thunk+0x1a/0x1c
<4> [2055.809099] softirqs last enabled at (50600): [<ffffffff81e00385>] __do_softirq+0x385/0x47f
<4> [2055.809106] softirqs last disabled at (50587): [<ffffffff810b92da>] irq_exit+0xba/0xc0
<4> [2055.809111] ---[ end trace be20f036d75fbbf7 ]---
<6> [2055.824875] [IGT] gem_userptr_blits: exiting, ret=0
<5> [2055.825435] Setting dangerous option reset - tainting kernel
<6> [2055.840242] Console: switching to colour frame buffer device 240x67
Edited by Chris Wilson